fixed nav bar to w-auto for both small and large screens so that content stays nicely in the center instead of stacked on one side

--- a/src/output.css
+++ b/src/output.css
@@ -614,6 +614,10 @@ video {
   height: 100%;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-full {
   width: 100%;
 }
@@ -752,6 +756,10 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:flex-wrap {
+    flex-wrap: wrap;
   }
 
   .md\:items-center {
